# auto-machine-learning

./: .gitignore  README.md
deploy/docker/: Dockerfile  README.md  main.py  requirements.txt
deploy/docker/api/: requirements.txt
deploy/docker/api/static/css/: style.css
deploy/docker/template/: demo.html_  main.py_
doc/generic/: Dockerfile  README.md  html_to_pdf_converter.py  main.py  requirements.txt
doc/generic/template/: main.html
doc/generic/template/css/: style.css
doc/generic/template/js/: main.js
model/lightgbm/: README.md  main.py  requirements.txt
model/random_forest/: README.md  custom_encoder.py  main.py  requirements.txt
model/xgboost/: Dockerfile  README.md  main.py  optuna_objective.py  requirements.txt
orchestrator/: .gitignore
orchestrator/rust/: Cargo.toml  README.md
orchestrator/rust/config/: defaults.toml  models.toml  transforms.toml
orchestrator/rust/src/: logging.rs  main.rs  settings.rs
preprocess/generic/: README.md  custom_encoder.py  main.py  profile_config.yaml  requirements.txt
