[package]
name = "rpa_algoritmos"
version = "0.1.0"
authors = ["Carlos Bologna <carlos.bologna@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.48"
csv = "1.1"
chrono = "0.4"
log = "0.4.11"
log4rs = "0.13.0"
names = "0.9.0"


